# PrimeDetectorPro

./: .gitignore  CMakeLists.txt  PrimeDetectorPro.slnx  README.md
PrimeDetectorPro/: PrimeDetectorPro.c  PrimeDetectorPro.vcxproj  PrimeDetectorPro.vcxproj.filters
src/PrimeDetectorPro/: PrimeDetectorPro.c  PrimeDetectorProCore.h  PrimeDetectorProTest.c
